--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description"
+        content="Ramona Oviatt -- Full Stack Web Developer -- Based in Edmonton Canada -- Creating beautiful and clean websites">
+    <meta name="author" content="Ramona Oviatt">
     <link rel="icon" href="<%= BASE_URL %>export.png">
     <title>Ramona Oviatt - Full Stack Web Developer</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
